--- a/pom.xml
+++ b/pom.xml
@@ -1035,7 +1035,15 @@
 
 		<profile>
 			<id>sigmah-dev</id>
-			<properties>
+				<properties>
+
+            <!-- Overrride properties for your local profile here... -->
+				    <sigmah.database.url>jdbc:postgresql://localhost:5432/sigmah</sigmah.database.url>
+				    <sigmah.database.user>sigmah</sigmah.database.user>
+				    <sigmah.database.password>@1ironical</sigmah.database.password>
+				    <files.repository.name>C:\\Sigmah\\files\\sigmah_dev</files.repository.name>
+				    <archives.repository.name>C:\\Sigmah\\files\\sigmah_dev\\archives</archives.repository.name>
+				</properties>
 
 				<gwt.style>PRETTY</gwt.style>
 
